takeOne function working

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="util.js"></script>
     <script src="voteScripts.js"></script>
-
+    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <title>Which will YOU choose!?</title>
@@ -26,7 +27,6 @@
 
     <div id=chart>
     </div>
-
 
 		<div id=veryBottom>
       <p>
