--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="util.js"></script>
     <script src="voteScripts.js"></script>
-    
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <title>Which will YOU choose!?</title>
@@ -23,6 +23,8 @@
     <h3>Simply choose the one that is BETTER</h3>
 
     <div id=choices>
+      <img id=food src="http://placehold.it/350x350">
+      <img id=panda src="http://placehold.it/350x350">
     </div>
 
     <div id=chart>
