--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="util.js"></script>
     <script src="voteScripts.js"></script>
+    <script src="voteChart.js"></script>
+    <script type="text/javascript" src="jquery.canvasjs.min.js"></script>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
@@ -23,8 +25,8 @@
     <h3>Simply choose the one that is BETTER</h3>
 
     <div id=choices>
-      <img id=food src="http://placehold.it/350x350">
-      <img id=panda src="http://placehold.it/350x350">
+      <img id=food src="">
+      <img id=panda src="">
     </div>
 
     <div id=chart>
