--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="jquery.canvasjs.min.js"></script>
     <script src="util.js"></script>
     <script src="voteScripts.js"></script>
     <script src="voteChart.js"></script>
-    <script type="text/javascript" src="jquery.canvasjs.min.js"></script>
+
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
@@ -27,6 +28,9 @@
     <div id=choices>
       <img id=food src="">
       <img id=panda src="">
+    </div>
+
+    <div id=spacing>
     </div>
 
     <div id=chart>
