--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="util.js"></script>
     <script src="voteScripts.js"></script>
     <script src="voteChart.js"></script>
+    <script src="dnd.js"></script>
 
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -26,8 +27,16 @@
     <h3>Simply choose the one that is BETTER</h3>
 
     <div id=choices>
-      <img id=food src="">
-      <img id=panda src="">
+      <img id=food
+           draggable=true
+           ondragstart='drag(event)'
+           ondrop='drop(event)'
+           ondragover='allowDrop(event)'>
+      <img id=panda
+           draggable=true
+           ondragstart='drag(event)'
+           ondrop='drop(event)'
+           ondragover='allowDrop(event)'>
     </div>
 
     <div id=spacing>
