--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
            ondragover='allowDrop(event)'>
     </div>
 
+    <form class="pure-form">
+      <label for="option-one" class="pure-checkbox">
+        <input id="foodBox" type="checkbox" value="" checked>
+        Show/hide food
+      </label>
+
+      <label for="option-two" class="pure-checkbox">
+        <input id="pandaBox" type="checkbox" value="" checked>
+        Show/hide panda
+      </label>
+    </form>
+
     <div id=spacing>
     </div>
 
